Improved 3D vizualization tools (still has many bugs) and added a maximization option in the view tab.

--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1739</width>
-    <height>1181</height>
+    <width>1735</width>
+    <height>1172</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -294,36 +294,7 @@
      </widget>
     </item>
     <item row="4" column="0" rowspan="2">
-     <layout class="QGridLayout" name="gridLayout_50">
-      <item row="1" column="1">
-       <widget class="QPushButton" name="pushButton_2">
-        <property name="text">
-         <string>Place holder</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QPushButton" name="LoadAll_Button">
-        <property name="text">
-         <string>Place holder - Delete all</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0">
-       <widget class="QPushButton" name="pushButton_10">
-        <property name="text">
-         <string>Place Holder - Duplicate</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QPushButton" name="pushButton_11">
-        <property name="text">
-         <string>Place holder - Delete</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
+     <layout class="QGridLayout" name="gridLayout_50"/>
     </item>
     <item row="5" column="1" colspan="2">
      <widget class="Line" name="line">
@@ -378,7 +349,7 @@
         <item row="5" column="1">
          <widget class="QLabel" name="label_2">
           <property name="text">
-           <string>TextLabel</string>
+           <string/>
           </property>
          </widget>
         </item>
@@ -390,7 +361,7 @@
            </font>
           </property>
           <property name="currentIndex">
-           <number>0</number>
+           <number>2</number>
           </property>
           <widget class="QWidget" name="tab_5">
            <attribute name="title">
@@ -438,9 +409,6 @@
                 <string>Brachy</string>
                </attribute>
                <layout class="QGridLayout" name="gridLayout_45">
-                <item row="1" column="0">
-                 <widget class="QComboBox" name="brachy_combobox_01"/>
-                </item>
                 <item row="2" column="2">
                  <spacer name="horizontalSpacer_46">
                   <property name="orientation">
@@ -454,36 +422,27 @@
                   </property>
                  </spacer>
                 </item>
-                <item row="1" column="5">
+                <item row="1" column="4">
                  <widget class="QCheckBox" name="display_brachy_channel_overlay">
                   <property name="text">
                    <string>Show channel</string>
                   </property>
                  </widget>
                 </item>
-                <item row="0" column="0" colspan="7">
-                 <widget class="QTableWidget" name="brachy_table_01">
-                  <property name="font">
-                   <font>
-                    <pointsize>12</pointsize>
-                   </font>
-                  </property>
-                 </widget>
-                </item>
-                <item row="2" column="6">
-                 <widget class="QPushButton" name="brachy_export_dw_channels_csv">
-                  <property name="text">
-                   <string>Export</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="1" column="6">
+                <item row="1" column="5">
                  <widget class="QCheckBox" name="overlay_all_channels">
                   <property name="text">
                    <string>All channels</string>
                   </property>
                   <property name="checked">
                    <bool>true</bool>
+                  </property>
+                 </widget>
+                </item>
+                <item row="1" column="3">
+                 <widget class="QCheckBox" name="display_dw_overlay">
+                  <property name="text">
+                   <string>Show dwell</string>
                   </property>
                  </widget>
                 </item>
@@ -502,15 +461,22 @@
                   </property>
                  </widget>
                 </item>
-                <item row="2" column="1">
-                 <widget class="QSpinBox" name="dw_ch_point_size">
+                <item row="1" column="0">
+                 <widget class="QComboBox" name="brachy_combobox_01"/>
+                </item>
+                <item row="0" column="0" colspan="6">
+                 <widget class="QTableWidget" name="brachy_table_01">
                   <property name="font">
                    <font>
-                    <pointsize>10</pointsize>
+                    <pointsize>12</pointsize>
                    </font>
                   </property>
-                  <property name="value">
-                   <number>3</number>
+                 </widget>
+                </item>
+                <item row="2" column="5">
+                 <widget class="QPushButton" name="brachy_export_dw_channels_csv">
+                  <property name="text">
+                   <string>Export</string>
                   </property>
                  </widget>
                 </item>
@@ -523,14 +489,7 @@
                   </property>
                  </widget>
                 </item>
-                <item row="1" column="4">
-                 <widget class="QCheckBox" name="display_dw_overlay">
-                  <property name="text">
-                   <string>Show dwell</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="2" column="4" colspan="2">
+                <item row="2" column="3" colspan="2">
                  <spacer name="horizontalSpacer_45">
                   <property name="orientation">
                    <enum>Qt::Horizontal</enum>
@@ -543,10 +502,15 @@
                   </property>
                  </spacer>
                 </item>
-                <item row="2" column="3">
-                 <widget class="QPushButton" name="pushButton_test">
-                  <property name="text">
-                   <string>PushButton</string>
+                <item row="2" column="1">
+                 <widget class="QSpinBox" name="dw_ch_point_size">
+                  <property name="font">
+                   <font>
+                    <pointsize>10</pointsize>
+                   </font>
+                  </property>
+                  <property name="value">
+                   <number>3</number>
                   </property>
                  </widget>
                 </item>
@@ -1419,16 +1383,26 @@
            </item>
            <item row="6" column="2">
             <widget class="QPushButton" name="View3D_clear_all">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="text">
               <string>Clear all</string>
              </property>
             </widget>
            </item>
            <item row="0" column="2">
-            <widget class="QDoubleSpinBox" name="View3D_quality_spin_01"/>
+            <widget class="QDoubleSpinBox" name="View3D_quality_spin_01">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+            </widget>
            </item>
            <item row="0" column="1">
             <widget class="QSlider" name="View3D_quality_slider">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
@@ -1436,6 +1410,9 @@
            </item>
            <item row="6" column="1">
             <widget class="QPushButton" name="View3D_reset_camera">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="text">
               <string>Reset Camera</string>
              </property>
@@ -1463,6 +1440,9 @@
            </item>
            <item row="1" column="1">
             <widget class="QSlider" name="View3D_brightness_slider">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
@@ -1479,7 +1459,11 @@
             </widget>
            </item>
            <item row="1" column="2">
-            <widget class="QDoubleSpinBox" name="View3D_brightness_spin_01"/>
+            <widget class="QDoubleSpinBox" name="View3D_brightness_spin_01">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+            </widget>
            </item>
            <item row="4" column="1" colspan="2">
             <widget class="QComboBox" name="iew3D_lighting_options"/>
@@ -1488,10 +1472,17 @@
             <widget class="QComboBox" name="View3D_render_options"/>
            </item>
            <item row="2" column="2">
-            <widget class="QDoubleSpinBox" name="View3D_specular_spin_01"/>
+            <widget class="QDoubleSpinBox" name="View3D_specular_spin_01">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+            </widget>
            </item>
            <item row="2" column="1">
             <widget class="QSlider" name="View3D_specular_slider">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
@@ -1499,6 +1490,9 @@
            </item>
            <item row="5" column="0">
             <widget class="QCheckBox" name="View3D_shading_checkBox">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="text">
               <string>Shading</string>
              </property>
@@ -1506,6 +1500,9 @@
            </item>
            <item row="5" column="1">
             <widget class="QCheckBox" name="View3D_shoiw_axes_checkBox">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="text">
               <string>Show axes</string>
              </property>
@@ -1513,6 +1510,9 @@
            </item>
            <item row="5" column="2">
             <widget class="QCheckBox" name="View3D_annotation_checkBox">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="text">
               <string>Annotation</string>
              </property>
@@ -1840,6 +1840,9 @@
              <layout class="QGridLayout" name="gridLayout_66">
               <item row="0" column="2">
                <widget class="QSlider" name="View3D_4D_speed_play_slider">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
                 <property name="orientation">
                  <enum>Qt::Horizontal</enum>
                 </property>
@@ -1863,7 +1866,11 @@
                </widget>
               </item>
               <item row="0" column="3">
-               <widget class="QDoubleSpinBox" name="View3D_4D_speed_play_spin_01"/>
+               <widget class="QDoubleSpinBox" name="View3D_4D_speed_play_spin_01">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
+               </widget>
               </item>
              </layout>
             </widget>
@@ -1887,8 +1894,21 @@
            </item>
            <item row="11" column="5">
             <widget class="QCheckBox" name="View3D_real_time_checkBox">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="text">
               <string>Real-time</string>
+             </property>
+            </widget>
+           </item>
+           <item row="10" column="5">
+            <widget class="QCheckBox" name="View3D_update_all_3D">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="text">
+              <string>Sync all</string>
              </property>
             </widget>
            </item>
@@ -8115,7 +8135,7 @@ p, li { white-space: pre-wrap; }
              <x>0</x>
              <y>0</y>
              <width>440</width>
-             <height>365</height>
+             <height>366</height>
             </rect>
            </property>
            <attribute name="label">
@@ -8542,38 +8562,6 @@ p, li { white-space: pre-wrap; }
       </property>
      </widget>
     </item>
-    <item row="4" column="0" rowspan="2">
-     <layout class="QGridLayout" name="gridLayout_5">
-      <item row="1" column="1">
-       <widget class="QPushButton" name="pushButton_test_2">
-        <property name="text">
-         <string>Place holder</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QPushButton" name="LoadAll_Button">
-        <property name="text">
-         <string>Place holder - Delete all</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0">
-       <widget class="QPushButton" name="pushButton_10">
-        <property name="text">
-         <string>Place Holder - Duplicate</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QPushButton" name="pushButton_11">
-        <property name="text">
-         <string>Place holder - Delete</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </item>
    </layout>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
@@ -8627,13 +8615,9 @@ p, li { white-space: pre-wrap; }
   <tabstop>I_value_b_coeff_calc</tabstop>
   <tabstop>tabWidget_5</tabstop>
   <tabstop>DataTreeView</tabstop>
-  <tabstop>pushButton_2</tabstop>
-  <tabstop>LoadAll_Button</tabstop>
   <tabstop>Process_list</tabstop>
   <tabstop>Func_description</tabstop>
   <tabstop>reset_table_mat</tabstop>
-  <tabstop>pushButton_10</tabstop>
-  <tabstop>pushButton_11</tabstop>
   <tabstop>tabModules</tabstop>
   <tabstop>Proces_label_01</tabstop>
   <tabstop>Proces_label_02</tabstop>
