Added option for saving

--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -306,7 +306,7 @@
     <item row="0" column="1" rowspan="5" colspan="2">
      <widget class="QTabWidget" name="tabModules">
       <property name="currentIndex">
-       <number>0</number>
+       <number>4</number>
       </property>
       <widget class="QWidget" name="im_display_tab">
        <attribute name="title">
@@ -3361,7 +3361,7 @@
         <item row="0" column="0">
          <widget class="QTabWidget" name="Plan_tabs">
           <property name="currentIndex">
-           <number>0</number>
+           <number>2</number>
           </property>
           <widget class="QWidget" name="Brachy_plan_tab">
            <attribute name="title">
@@ -5041,13 +5041,10 @@
             <item row="0" column="0">
              <widget class="QWidget" name="ct_cal_input" native="true">
               <layout class="QGridLayout" name="gridLayout_57">
-               <item row="2" column="0" colspan="2">
-                <widget class="QTableWidget" name="ct_cal_table"/>
-               </item>
-               <item row="3" column="0" colspan="2">
-                <widget class="QPushButton" name="ct_cal_add_row">
-                 <property name="text">
-                  <string>Add row</string>
+               <item row="0" column="0">
+                <widget class="QComboBox" name="ct_cal_list">
+                 <property name="editable">
+                  <bool>true</bool>
                  </property>
                 </widget>
                </item>
@@ -5058,24 +5055,34 @@
                  </property>
                 </widget>
                </item>
-               <item row="1" column="0">
-                <widget class="QPushButton" name="save_changes_ct_cal">
-                 <property name="text">
-                  <string>Save</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="0" column="0">
-                <widget class="QComboBox" name="ct_cal_list">
-                 <property name="editable">
-                  <bool>true</bool>
-                 </property>
-                </widget>
+               <item row="2" column="0" colspan="2">
+                <widget class="QTableWidget" name="ct_cal_table"/>
                </item>
                <item row="0" column="1">
                 <widget class="QPushButton" name="load_ct_cal">
                  <property name="text">
                   <string>Load</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="0">
+                <widget class="QPushButton" name="save_changes_ct_cal">
+                 <property name="text">
+                  <string>Update</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="3" column="0">
+                <widget class="QPushButton" name="ct_cal_add_row">
+                 <property name="text">
+                  <string>Add row</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="3" column="1">
+                <widget class="QPushButton" name="ct_cal_save_copy">
+                 <property name="text">
+                  <string>Save</string>
                  </property>
                 </widget>
                </item>
@@ -7964,8 +7971,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>242</width>
-             <height>151</height>
+             <width>222</width>
+             <height>130</height>
             </rect>
            </property>
            <attribute name="label">
@@ -8106,8 +8113,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>120</width>
-             <height>50</height>
+             <width>101</width>
+             <height>41</height>
             </rect>
            </property>
            <attribute name="label">
@@ -8134,8 +8141,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>440</width>
-             <height>366</height>
+             <width>443</width>
+             <height>385</height>
             </rect>
            </property>
            <attribute name="label">
