--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -306,7 +306,7 @@
     <item row="0" column="1" rowspan="5" colspan="2">
      <widget class="QTabWidget" name="tabModules">
       <property name="currentIndex">
-       <number>4</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="im_display_tab">
        <attribute name="title">
@@ -3361,7 +3361,7 @@
         <item row="0" column="0">
          <widget class="QTabWidget" name="Plan_tabs">
           <property name="currentIndex">
-           <number>2</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="Brachy_plan_tab">
            <attribute name="title">
@@ -5041,10 +5041,10 @@
             <item row="0" column="0">
              <widget class="QWidget" name="ct_cal_input" native="true">
               <layout class="QGridLayout" name="gridLayout_57">
-               <item row="0" column="0">
-                <widget class="QComboBox" name="ct_cal_list">
-                 <property name="editable">
-                  <bool>true</bool>
+               <item row="0" column="1">
+                <widget class="QPushButton" name="load_ct_cal">
+                 <property name="text">
+                  <string>Load</string>
                  </property>
                 </widget>
                </item>
@@ -5055,22 +5055,22 @@
                  </property>
                 </widget>
                </item>
-               <item row="2" column="0" colspan="2">
-                <widget class="QTableWidget" name="ct_cal_table"/>
-               </item>
-               <item row="0" column="1">
-                <widget class="QPushButton" name="load_ct_cal">
-                 <property name="text">
-                  <string>Load</string>
-                 </property>
-                </widget>
-               </item>
                <item row="1" column="0">
                 <widget class="QPushButton" name="save_changes_ct_cal">
                  <property name="text">
                   <string>Update</string>
                  </property>
                 </widget>
+               </item>
+               <item row="0" column="0">
+                <widget class="QComboBox" name="ct_cal_list">
+                 <property name="editable">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+               <item row="2" column="0" colspan="2">
+                <widget class="QTableWidget" name="ct_cal_table"/>
                </item>
                <item row="3" column="0">
                 <widget class="QPushButton" name="ct_cal_add_row">
@@ -5083,6 +5083,13 @@
                 <widget class="QPushButton" name="ct_cal_save_copy">
                  <property name="text">
                   <string>Save</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="4" column="0" colspan="2">
+                <widget class="QPushButton" name="create_density_map">
+                 <property name="text">
+                  <string>Create density map</string>
                  </property>
                 </widget>
                </item>
