--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -306,7 +306,7 @@
     <item row="0" column="1" rowspan="5" colspan="2">
      <widget class="QTabWidget" name="tabModules">
       <property name="currentIndex">
-       <number>0</number>
+       <number>4</number>
       </property>
       <widget class="QWidget" name="im_display_tab">
        <attribute name="title">
@@ -2059,7 +2059,7 @@
         <item row="1" column="0">
          <widget class="QTabWidget" name="DECTmenu">
           <property name="currentIndex">
-           <number>0</number>
+           <number>2</number>
           </property>
           <widget class="QWidget" name="tab">
            <attribute name="title">
@@ -3361,7 +3361,7 @@
         <item row="0" column="0">
          <widget class="QTabWidget" name="Plan_tabs">
           <property name="currentIndex">
-           <number>0</number>
+           <number>3</number>
           </property>
           <widget class="QWidget" name="Brachy_plan_tab">
            <attribute name="title">
@@ -5033,87 +5033,6 @@
             </widget>
            </widget>
           </widget>
-          <widget class="QWidget" name="imaging_device">
-           <attribute name="title">
-            <string>Imaging devices</string>
-           </attribute>
-           <layout class="QGridLayout" name="gridLayout_58" rowstretch="3,1" columnstretch="1,4">
-            <item row="0" column="0">
-             <widget class="QWidget" name="ct_cal_input" native="true">
-              <layout class="QGridLayout" name="gridLayout_57">
-               <item row="0" column="1">
-                <widget class="QPushButton" name="load_ct_cal">
-                 <property name="text">
-                  <string>Load</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="1" column="1">
-                <widget class="QPushButton" name="Export_ct_cal">
-                 <property name="text">
-                  <string>Export</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="1" column="0">
-                <widget class="QPushButton" name="save_changes_ct_cal">
-                 <property name="text">
-                  <string>Update</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="0" column="0">
-                <widget class="QComboBox" name="ct_cal_list">
-                 <property name="editable">
-                  <bool>true</bool>
-                 </property>
-                </widget>
-               </item>
-               <item row="2" column="0" colspan="2">
-                <widget class="QTableWidget" name="ct_cal_table"/>
-               </item>
-               <item row="3" column="0">
-                <widget class="QPushButton" name="ct_cal_add_row">
-                 <property name="text">
-                  <string>Add row</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="3" column="1">
-                <widget class="QPushButton" name="ct_cal_save_copy">
-                 <property name="text">
-                  <string>Save</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="4" column="0" colspan="2">
-                <widget class="QPushButton" name="create_density_map">
-                 <property name="text">
-                  <string>Create density map</string>
-                 </property>
-                </widget>
-               </item>
-              </layout>
-             </widget>
-            </item>
-            <item row="0" column="1">
-             <widget class="QWidget" name="ct_cal_plot" native="true"/>
-            </item>
-            <item row="1" column="0">
-             <spacer name="verticalSpacer_19">
-              <property name="orientation">
-               <enum>Qt::Vertical</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>20</width>
-                <height>40</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-           </layout>
-          </widget>
           <widget class="QWidget" name="Plan_Evaluation">
            <attribute name="title">
             <string>Plan Evaluation </string>
@@ -5817,6 +5736,188 @@
                </spacer>
               </item>
              </layout>
+            </item>
+           </layout>
+          </widget>
+          <widget class="QWidget" name="tab_mat_assignment">
+           <attribute name="title">
+            <string>Material Assignment</string>
+           </attribute>
+           <layout class="QGridLayout" name="gridLayout_5" columnstretch="1,1,3">
+            <item row="0" column="0">
+             <widget class="QGroupBox" name="mat_to_HU_box">
+              <property name="title">
+               <string>Assign materials to HU ranges</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="1">
+             <widget class="QGroupBox" name="groupBox_mat_to_struct">
+              <property name="title">
+               <string>Assign materials to structures</string>
+              </property>
+             </widget>
+            </item>
+            <item row="0" column="2">
+             <widget class="QGroupBox" name="groupBox_mat_properties">
+              <property name="title">
+               <string>Properties</string>
+              </property>
+              <layout class="QGridLayout" name="gridLayout_68">
+               <item row="2" column="2">
+                <widget class="QPushButton" name="add_element">
+                 <property name="text">
+                  <string>Add Element</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="2" column="0" colspan="2">
+                <widget class="QLineEdit" name="element">
+                 <property name="text">
+                  <string>Column Name</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="0" colspan="6">
+                <widget class="QTableWidget" name="mat_table"/>
+               </item>
+               <item row="1" column="1">
+                <widget class="QPushButton" name="del_mat">
+                 <property name="text">
+                  <string>Delete Material</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="0">
+                <widget class="QPushButton" name="Add_mat">
+                 <property name="text">
+                  <string>Add Material</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="2" column="3">
+                <widget class="QPushButton" name="del_element">
+                 <property name="text">
+                  <string>Delete Element</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="4">
+                <widget class="QPushButton" name="save_mat_table">
+                 <property name="text">
+                  <string>Save</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="2" column="4">
+                <spacer name="hs_mat_1">
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>40</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
+               <item row="1" column="2" colspan="2">
+                <spacer name="hs_mat_2">
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>295</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
+              </layout>
+             </widget>
+            </item>
+           </layout>
+          </widget>
+          <widget class="QWidget" name="density_map_tab">
+           <attribute name="title">
+            <string>Density Map</string>
+           </attribute>
+           <layout class="QGridLayout" name="gridLayout_58" rowstretch="3,1" columnstretch="1,4">
+            <item row="0" column="0">
+             <widget class="QWidget" name="ct_cal_input" native="true">
+              <layout class="QGridLayout" name="gridLayout_57">
+               <item row="0" column="1">
+                <widget class="QPushButton" name="load_ct_cal">
+                 <property name="text">
+                  <string>Load</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="1">
+                <widget class="QPushButton" name="Export_ct_cal">
+                 <property name="text">
+                  <string>Export</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="0">
+                <widget class="QPushButton" name="save_changes_ct_cal">
+                 <property name="text">
+                  <string>Update</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="0">
+                <widget class="QComboBox" name="ct_cal_list">
+                 <property name="editable">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+               <item row="2" column="0" colspan="2">
+                <widget class="QTableWidget" name="ct_cal_table"/>
+               </item>
+               <item row="3" column="0">
+                <widget class="QPushButton" name="ct_cal_add_row">
+                 <property name="text">
+                  <string>Add row</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="3" column="1">
+                <widget class="QPushButton" name="ct_cal_save_copy">
+                 <property name="text">
+                  <string>Save</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="4" column="0" colspan="2">
+                <widget class="QPushButton" name="create_density_map">
+                 <property name="text">
+                  <string>Create density map</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </widget>
+            </item>
+            <item row="0" column="1">
+             <widget class="QWidget" name="ct_cal_plot" native="true"/>
+            </item>
+            <item row="1" column="0">
+             <spacer name="verticalSpacer_19">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>40</height>
+               </size>
+              </property>
+             </spacer>
             </item>
            </layout>
           </widget>
