--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -272,7 +272,7 @@
     <item row="7" column="1" colspan="2">
      <widget class="QLabel" name="label">
       <property name="text">
-       <string>TextLabel</string>
+       <string/>
       </property>
      </widget>
     </item>
@@ -306,7 +306,7 @@
     <item row="0" column="1" rowspan="5" colspan="2">
      <widget class="QTabWidget" name="tabModules">
       <property name="currentIndex">
-       <number>4</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="im_display_tab">
        <attribute name="title">
@@ -5743,27 +5743,83 @@
            <attribute name="title">
             <string>Material Assignment</string>
            </attribute>
-           <layout class="QGridLayout" name="gridLayout_5" columnstretch="1,1,3">
-            <item row="0" column="0">
-             <widget class="QGroupBox" name="mat_to_HU_box">
+           <layout class="QGridLayout" name="gridLayout_69" rowstretch="1,6">
+            <item row="0" column="0" colspan="2">
+             <widget class="QGroupBox" name="assign_mat">
               <property name="title">
-               <string>Assign materials to HU ranges</string>
+               <string>Assign</string>
               </property>
+              <layout class="QGridLayout" name="gridLayout_5" columnstretch="8,1,1,1,1,1,1">
+               <item row="0" column="6">
+                <widget class="QPushButton" name="mat_to_hu">
+                 <property name="text">
+                  <string>Assign to HU range</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="0" colspan="2">
+                <widget class="QComboBox" name="Select_mat"/>
+               </item>
+               <item row="0" column="5">
+                <widget class="QLineEdit" name="HU_high"/>
+               </item>
+               <item row="0" column="4">
+                <widget class="QLabel" name="label_mat_2">
+                 <property name="text">
+                  <string>To</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="3">
+                <widget class="QLineEdit" name="HU_low"/>
+               </item>
+               <item row="0" column="2">
+                <widget class="QLabel" name="label_mat">
+                 <property name="text">
+                  <string>From</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="2" column="0" colspan="2">
+                <widget class="QComboBox" name="Struct_list_mat"/>
+               </item>
+               <item row="2" column="2" colspan="2">
+                <widget class="QPushButton" name="update_struct_list_mat">
+                 <property name="text">
+                  <string>Update </string>
+                 </property>
+                </widget>
+               </item>
+               <item row="2" column="4" colspan="2">
+                <widget class="QPushButton" name="mat_to_struct">
+                 <property name="text">
+                  <string>Assign to structure</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="2" column="6">
+                <widget class="QPushButton" name="create_mat_map">
+                 <property name="text">
+                  <string>Create map</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
              </widget>
             </item>
-            <item row="0" column="1">
-             <widget class="QGroupBox" name="groupBox_mat_to_struct">
-              <property name="title">
-               <string>Assign materials to structures</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="2">
+            <item row="0" column="2" rowspan="2">
              <widget class="QGroupBox" name="groupBox_mat_properties">
               <property name="title">
                <string>Properties</string>
               </property>
               <layout class="QGridLayout" name="gridLayout_68">
+               <item row="1" column="4">
+                <widget class="QPushButton" name="save_mat_table">
+                 <property name="text">
+                  <string>Save</string>
+                 </property>
+                </widget>
+               </item>
                <item row="2" column="2">
                 <widget class="QPushButton" name="add_element">
                  <property name="text">
@@ -5771,15 +5827,18 @@
                  </property>
                 </widget>
                </item>
-               <item row="2" column="0" colspan="2">
-                <widget class="QLineEdit" name="element">
-                 <property name="text">
-                  <string>Column Name</string>
+               <item row="1" column="2" colspan="2">
+                <spacer name="hs_mat_2">
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
                  </property>
-                </widget>
-               </item>
-               <item row="0" column="0" colspan="6">
-                <widget class="QTableWidget" name="mat_table"/>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>295</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                </spacer>
                </item>
                <item row="1" column="1">
                 <widget class="QPushButton" name="del_mat">
@@ -5788,24 +5847,10 @@
                  </property>
                 </widget>
                </item>
-               <item row="1" column="0">
-                <widget class="QPushButton" name="Add_mat">
+               <item row="2" column="0" colspan="2">
+                <widget class="QLineEdit" name="element">
                  <property name="text">
-                  <string>Add Material</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="2" column="3">
-                <widget class="QPushButton" name="del_element">
-                 <property name="text">
-                  <string>Delete Element</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="1" column="4">
-                <widget class="QPushButton" name="save_mat_table">
-                 <property name="text">
-                  <string>Save</string>
+                  <string>Column Name</string>
                  </property>
                 </widget>
                </item>
@@ -5822,20 +5867,84 @@
                  </property>
                 </spacer>
                </item>
-               <item row="1" column="2" colspan="2">
-                <spacer name="hs_mat_2">
-                 <property name="orientation">
-                  <enum>Qt::Horizontal</enum>
+               <item row="2" column="3">
+                <widget class="QPushButton" name="del_element">
+                 <property name="text">
+                  <string>Delete Element</string>
                  </property>
-                 <property name="sizeHint" stdset="0">
-                  <size>
-                   <width>295</width>
-                   <height>20</height>
-                  </size>
+                </widget>
+               </item>
+               <item row="1" column="0">
+                <widget class="QPushButton" name="Add_mat">
+                 <property name="text">
+                  <string>Add Material</string>
                  </property>
-                </spacer>
+                </widget>
+               </item>
+               <item row="0" column="0" colspan="6">
+                <widget class="QTableWidget" name="mat_table"/>
                </item>
               </layout>
+             </widget>
+            </item>
+            <item row="1" column="0">
+             <widget class="QGroupBox" name="mat_to_HU_box">
+              <property name="title">
+               <string>Materials to HU ranges</string>
+              </property>
+              <widget class="QTableWidget" name="tableWidget">
+               <property name="geometry">
+                <rect>
+                 <x>15</x>
+                 <y>30</y>
+                 <width>241</width>
+                 <height>751</height>
+                </rect>
+               </property>
+              </widget>
+              <widget class="QPushButton" name="remove_mat_fromhu">
+               <property name="geometry">
+                <rect>
+                 <x>20</x>
+                 <y>790</y>
+                 <width>221</width>
+                 <height>23</height>
+                </rect>
+               </property>
+               <property name="text">
+                <string>Remove material</string>
+               </property>
+              </widget>
+             </widget>
+            </item>
+            <item row="1" column="1">
+             <widget class="QGroupBox" name="groupBox_mat_to_struct">
+              <property name="title">
+               <string>Materials to structures</string>
+              </property>
+              <widget class="QPushButton" name="remove_mat_from_struct">
+               <property name="geometry">
+                <rect>
+                 <x>30</x>
+                 <y>790</y>
+                 <width>221</width>
+                 <height>23</height>
+                </rect>
+               </property>
+               <property name="text">
+                <string>Remove material</string>
+               </property>
+              </widget>
+              <widget class="QTableWidget" name="mat_to_struct_tab">
+               <property name="geometry">
+                <rect>
+                 <x>10</x>
+                 <y>40</y>
+                 <width>241</width>
+                 <height>751</height>
+                </rect>
+               </property>
+              </widget>
              </widget>
             </item>
            </layout>
