--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -5743,7 +5743,7 @@
            <attribute name="title">
             <string>Material Assignment</string>
            </attribute>
-           <layout class="QGridLayout" name="gridLayout_69" rowstretch="1,6">
+           <layout class="QGridLayout" name="gridLayout_69" rowstretch="1,8" columnstretch="1,1,3">
             <item row="0" column="0" colspan="2">
              <widget class="QGroupBox" name="assign_mat">
               <property name="title">
@@ -5813,10 +5813,17 @@
                <string>Properties</string>
               </property>
               <layout class="QGridLayout" name="gridLayout_68">
-               <item row="1" column="4">
-                <widget class="QPushButton" name="save_mat_table">
+               <item row="2" column="0" colspan="2">
+                <widget class="QLineEdit" name="element">
                  <property name="text">
-                  <string>Save</string>
+                  <string>Column Name</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="0">
+                <widget class="QPushButton" name="Add_mat">
+                 <property name="text">
+                  <string>Add Material</string>
                  </property>
                 </widget>
                </item>
@@ -5824,6 +5831,13 @@
                 <widget class="QPushButton" name="add_element">
                  <property name="text">
                   <string>Add Element</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="2" column="3">
+                <widget class="QPushButton" name="del_element">
+                 <property name="text">
+                  <string>Delete Element</string>
                  </property>
                 </widget>
                </item>
@@ -5847,42 +5861,22 @@
                  </property>
                 </widget>
                </item>
-               <item row="2" column="0" colspan="2">
-                <widget class="QLineEdit" name="element">
-                 <property name="text">
-                  <string>Column Name</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="2" column="4">
-                <spacer name="hs_mat_1">
-                 <property name="orientation">
-                  <enum>Qt::Horizontal</enum>
-                 </property>
-                 <property name="sizeHint" stdset="0">
-                  <size>
-                   <width>40</width>
-                   <height>20</height>
-                  </size>
-                 </property>
-                </spacer>
-               </item>
-               <item row="2" column="3">
-                <widget class="QPushButton" name="del_element">
-                 <property name="text">
-                  <string>Delete Element</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="1" column="0">
-                <widget class="QPushButton" name="Add_mat">
-                 <property name="text">
-                  <string>Add Material</string>
-                 </property>
-                </widget>
-               </item>
                <item row="0" column="0" colspan="6">
                 <widget class="QTableWidget" name="mat_table"/>
+               </item>
+               <item row="1" column="4" colspan="2">
+                <widget class="QPushButton" name="save_mat_table">
+                 <property name="text">
+                  <string>Save</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="2" column="4" colspan="2">
+                <widget class="QPushButton" name="undo_mat_tab">
+                 <property name="text">
+                  <string>Reset</string>
+                 </property>
+                </widget>
                </item>
               </layout>
              </widget>
@@ -8262,8 +8256,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>213</width>
-             <height>127</height>
+             <width>222</width>
+             <height>130</height>
             </rect>
            </property>
            <attribute name="label">
@@ -8404,7 +8398,7 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>102</width>
+             <width>101</width>
              <height>41</height>
             </rect>
            </property>
@@ -8432,8 +8426,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>444</width>
-             <height>385</height>
+             <width>206</width>
+             <height>147</height>
             </rect>
            </property>
            <attribute name="label">
