Added option to delete the material map

--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -5743,13 +5743,13 @@
            <attribute name="title">
             <string>Material Assignment</string>
            </attribute>
-           <layout class="QGridLayout" name="gridLayout_69" rowstretch="1,8" columnstretch="1,1,3">
+           <layout class="QGridLayout" name="gridLayout_69" rowstretch="1,10,1" columnstretch="1,1,4">
             <item row="0" column="0" colspan="2">
              <widget class="QGroupBox" name="assign_mat">
               <property name="title">
                <string>Assign</string>
               </property>
-              <layout class="QGridLayout" name="gridLayout_5" columnstretch="8,1,1,1,1,1,1">
+              <layout class="QGridLayout" name="gridLayout_5" columnstretch="10,1,1,1,1,1,1">
                <item row="0" column="6">
                 <widget class="QPushButton" name="mat_to_hu">
                  <property name="text">
@@ -5783,21 +5783,14 @@
                <item row="2" column="0" colspan="2">
                 <widget class="QComboBox" name="Struct_list_mat"/>
                </item>
-               <item row="2" column="2" colspan="2">
-                <widget class="QPushButton" name="update_struct_list_mat">
-                 <property name="text">
-                  <string>Update </string>
-                 </property>
-                </widget>
-               </item>
-               <item row="2" column="4" colspan="2">
+               <item row="2" column="2" colspan="3">
                 <widget class="QPushButton" name="mat_to_struct">
                  <property name="text">
                   <string>Assign to structure</string>
                  </property>
                 </widget>
                </item>
-               <item row="2" column="6">
+               <item row="2" column="5" colspan="2">
                 <widget class="QPushButton" name="create_mat_map">
                  <property name="text">
                   <string>Create map</string>
@@ -5807,7 +5800,64 @@
               </layout>
              </widget>
             </item>
-            <item row="0" column="2" rowspan="2">
+            <item row="1" column="0">
+             <widget class="QGroupBox" name="mat_to_HU_box">
+              <property name="title">
+               <string>Materials to HU ranges</string>
+              </property>
+              <layout class="QGridLayout" name="gridLayout_71">
+               <item row="0" column="0">
+                <widget class="QTableWidget" name="tableMatToHU"/>
+               </item>
+               <item row="1" column="0">
+                <widget class="QPushButton" name="remove_mat_fromhu">
+                 <property name="text">
+                  <string>Remove material</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </widget>
+            </item>
+            <item row="1" column="1">
+             <widget class="QGroupBox" name="groupBox_mat_to_struct">
+              <property name="title">
+               <string>Materials to structures</string>
+              </property>
+              <layout class="QGridLayout" name="gridLayout_72">
+               <item row="0" column="0">
+                <widget class="QTableWidget" name="mat_to_struct_tab"/>
+               </item>
+               <item row="1" column="0">
+                <widget class="QPushButton" name="remove_mat_from_struct">
+                 <property name="text">
+                  <string>Remove material</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </widget>
+            </item>
+            <item row="2" column="0" colspan="2">
+             <widget class="QGroupBox" name="del_mat_map_qbox">
+              <property name="title">
+               <string>Delete material map</string>
+              </property>
+              <layout class="QGridLayout" name="gridLayout_74">
+               <item row="0" column="0">
+                <widget class="QComboBox" name="mat_map_list"/>
+               </item>
+               <item row="0" column="1">
+                <widget class="QPushButton" name="del_mat_map">
+                 <property name="text">
+                  <string>Delete</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </widget>
+            </item>
+            <item row="0" column="2" rowspan="3">
              <widget class="QGroupBox" name="groupBox_mat_properties">
               <property name="title">
                <string>Properties</string>
@@ -5875,44 +5925,6 @@
                 <widget class="QPushButton" name="undo_mat_tab">
                  <property name="text">
                   <string>Reset</string>
-                 </property>
-                </widget>
-               </item>
-              </layout>
-             </widget>
-            </item>
-            <item row="1" column="0">
-             <widget class="QGroupBox" name="mat_to_HU_box">
-              <property name="title">
-               <string>Materials to HU ranges</string>
-              </property>
-              <layout class="QGridLayout" name="gridLayout_71">
-               <item row="0" column="0">
-                <widget class="QTableWidget" name="tableMatToHU"/>
-               </item>
-               <item row="1" column="0">
-                <widget class="QPushButton" name="remove_mat_fromhu">
-                 <property name="text">
-                  <string>Remove material</string>
-                 </property>
-                </widget>
-               </item>
-              </layout>
-             </widget>
-            </item>
-            <item row="1" column="1">
-             <widget class="QGroupBox" name="groupBox_mat_to_struct">
-              <property name="title">
-               <string>Materials to structures</string>
-              </property>
-              <layout class="QGridLayout" name="gridLayout_72">
-               <item row="0" column="0">
-                <widget class="QTableWidget" name="mat_to_struct_tab"/>
-               </item>
-               <item row="1" column="0">
-                <widget class="QPushButton" name="remove_mat_from_struct">
-                 <property name="text">
-                  <string>Remove material</string>
                  </property>
                 </widget>
                </item>
@@ -8426,8 +8438,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>206</width>
-             <height>147</height>
+             <width>444</width>
+             <height>389</height>
             </rect>
            </property>
            <attribute name="label">
