--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -8546,7 +8546,7 @@ p, li { white-space: pre-wrap; }
          </widget>
         </item>
         <item row="3" column="3">
-         <layout class="QHBoxLayout" name="horizontalLayout_6" stretch="2,1,2,1">
+         <layout class="QHBoxLayout" name="horizontalLayout_6" stretch="2,0,2,0">
           <item>
            <widget class="QLineEdit" name="threshMinBox">
             <property name="enabled">
@@ -8564,14 +8564,7 @@ p, li { white-space: pre-wrap; }
            </widget>
           </item>
           <item>
-           <widget class="QSpinBox" name="segThreshMinHU">
-            <property name="minimum">
-             <number>-1024</number>
-            </property>
-            <property name="maximum">
-             <number>3072</number>
-            </property>
-           </widget>
+           <widget class="QLineEdit" name="lineEdit_65"/>
           </item>
           <item>
            <widget class="QLineEdit" name="threshMaxBox">
@@ -8590,14 +8583,7 @@ p, li { white-space: pre-wrap; }
            </widget>
           </item>
           <item>
-           <widget class="QSpinBox" name="segThreshMaxHU">
-            <property name="minimum">
-             <number>-1024</number>
-            </property>
-            <property name="maximum">
-             <number>3072</number>
-            </property>
-           </widget>
+           <widget class="QLineEdit" name="lineEdit_75"/>
           </item>
          </layout>
         </item>
