--- a/ImGUI.ui
+++ b/ImGUI.ui
@@ -8183,8 +8183,34 @@ p, li { white-space: pre-wrap; }
                <attribute name="title">
                 <string>Duet Web Control</string>
                </attribute>
-               <layout class="QGridLayout" name="gridLayout_DuetWebControl">
+               <layout class="QGridLayout" name="gridLayout_DuetWebControl" columnstretch="1,2,7" columnminimumwidth="0,0,0">
                 <item row="0" column="0">
+                 <widget class="QLineEdit" name="lineEdit_65">
+                  <property name="enabled">
+                   <bool>false</bool>
+                  </property>
+                  <property name="text">
+                   <string>IP address</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="0" column="1">
+                 <widget class="QLineEdit" name="DuetIPAddress"/>
+                </item>
+                <item row="0" column="2">
+                 <spacer name="horizontalSpacer_78">
+                  <property name="orientation">
+                   <enum>Qt::Horizontal</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>40</width>
+                    <height>20</height>
+                   </size>
+                  </property>
+                 </spacer>
+                </item>
+                <item row="1" column="0" colspan="3">
                  <widget class="QWebEngineView" name="DuetControlView">
                   <property name="focusPolicy">
                    <enum>Qt::WheelFocus</enum>
@@ -8284,8 +8310,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>222</width>
-             <height>130</height>
+             <width>172</width>
+             <height>127</height>
             </rect>
            </property>
            <attribute name="label">
@@ -8426,7 +8452,7 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>101</width>
+             <width>98</width>
              <height>41</height>
             </rect>
            </property>
@@ -8454,8 +8480,8 @@ p, li { white-space: pre-wrap; }
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>444</width>
-             <height>389</height>
+             <width>174</width>
+             <height>135</height>
             </rect>
            </property>
            <attribute name="label">
